--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "prisma": "^5.10.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
